--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>Created with <i class="fas fa-heart"></i> by Vicky </p>
+        <p>Created with <i class="fas fa-heart"></i> by VICKY </p>
     </div>
     <script src="script.js"></script>
 </body>
