--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>WATCH</title>
 </head>
 <body>
+ <div class="master">
     <div class="main">
         <div class="stopwatch-body">
             <div class="stopwatch-inner-body">
@@ -23,6 +24,7 @@
     <div class="footer">
         <p>Created with <i class="fas fa-heart"></i> by VICKY </p>
     </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
